# well-written-server

./: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile  fly.toml
.github/workflows/: main.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20221001_204938_create_user_table.rs  m20221002_055451_create_blog_table.rs
prisma/: schema.prisma
prisma/migrations/20221023081527_initialize/: migration.sql
src/: lib.rs  main.rs  prisma.rs
src/entities/: blog.rs  blog_membership.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
src/schema/: mod.rs
