[package]
name = "well-written-server"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
name = "well_written_server"

[dependencies]
anyhow = "1.0.65"
async-graphql = { version = "4.0.14", features = [
  "dataloader",
  "uuid",
  "chrono",
] }
async-graphql-axum = "4.0.14"
axum = "0.5.16"
chrono = "0.4.22"
dotenv = "0.15.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
rustls = "0.20.6"
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
uuid = "1.1.2"
